--- a/SMS/Components/Layout/FunctionSearch.razor
+++ b/SMS/Components/Layout/FunctionSearch.razor
@@ -90,17 +90,15 @@
             {
                 "0" => new List<FunctionItem> // 学生端功能
                 {
-                                    new FunctionItem { Name = "我的选课", Description = "查看和管理我的选课", Icon = "team", Url = "/student-pages/student-enrollment", Keywords = new[] { "选课", "enrollment", "我的选课", "课程选择" } },
-                new FunctionItem { Name = "课程查询", Description = "查询可用课程信息", Icon = "book", Url = "/student-pages/student-courses", Keywords = new[] { "课程", "course", "课程查询", "课程信息" } },
-                new FunctionItem { Name = "成绩查询", Description = "查看我的成绩", Icon = "trophy", Url = "/student-pages/student-grades", Keywords = new[] { "成绩", "grade", "成绩查询", "分数" } },
-                    new FunctionItem { Name = "个人信息", Description = "查看和修改个人信息", Icon = "idcard", Url = "/user-profile", Keywords = new[] { "个人信息", "profile", "学生信息" } }
-                },
-                "1" => new List<FunctionItem> // 老师端功能
+                    new FunctionItem { Name = "我的选课", Description = "查看和管理我的选课", Icon = "team", Url = "/student-pages/student-enrollment", Keywords = new[] { "选课", "enrollment", "我的选课", "课程选择" } },
+                    new FunctionItem { Name = "课程查询", Description = "查询可用课程信息", Icon = "book", Url = "/student-pages/student-courses", Keywords = new[] { "课程", "course", "课程查询", "课程信息" } },
+                    new FunctionItem { Name = "成绩查询", Description = "查看我的成绩", Icon = "trophy", Url = "/student-pages/student-grades", Keywords = new[] { "成绩", "grade", "成绩查询", "分数" } }
+                    },
+                    "1" => new List<FunctionItem> // 老师端功能
                 {
                     new FunctionItem { Name = "课程管理", Description = "管理我的课程", Icon = "team", Url = "/teacher-pages/teacher-enrollment", Keywords = new[] { "课程", "course", "课程管理", "我的课程" } },
                     new FunctionItem { Name = "我的课程", Description = "查看我的授课课程", Icon = "book", Url = "/teacher-pages/teacher-courses", Keywords = new[] { "课程", "course", "我的课程", "授课" } },
-                    new FunctionItem { Name = "成绩管理", Description = "管理学生成绩", Icon = "trophy", Url = "/teacher-pages/teacher-grades", Keywords = new[] { "成绩", "grade", "成绩管理", "分数" } },
-                    new FunctionItem { Name = "个人信息", Description = "查看和修改个人信息", Icon = "idcard", Url = "/user-profile", Keywords = new[] { "个人信息", "profile", "教师信息" } }
+                    new FunctionItem { Name = "成绩管理", Description = "管理学生成绩", Icon = "trophy", Url = "/teacher-pages/teacher-grades", Keywords = new[] { "成绩", "grade", "成绩管理", "分数" } }
                 },
                 "2" => new List<FunctionItem> // 管理员端功能
                 {
