--- a/SMS/Components/_Imports.razor
+++ b/SMS/Components/_Imports.razor
@@ -11,3 +11,5 @@
 @using Microsoft.AspNetCore.Components.Authorization
 @using AntDesign
 @using Microsoft.AspNetCore.Components
+@using Microsoft.Extensions.Localization
+@using SMS.Resources
